# compiler-learning

./: Cargo.toml  Justfile  README.md  flake.nix
inference/src/: ir.rs  main.rs  program.rs  ty.rs
kaleidoscope/: Cargo.toml  Justfile  flake.nix  sample.kds
kaleidoscope/samples/: fibonacci.kl  fibonacci.txt  future_constructs.kl  interface.kl  simple.kl  simple.txt  str_literal.kl
kaleidoscope/src/: ast.rs  driver.rs  errors.rs  ffi.rs  front.rs  grammar.txt  hir.rs  lexer.rs  lib.rs  lowerer.rs  main.rs  parser.rs  pretty_print.rs  resolve.rs  session.rs  tbir.rs  thir.rs  ty.rs
kaleidoscope/src/codegen/: cranelift.rs  llvm.rs  mod.rs
kaleidoscope/std/: arith.kl
kaleidoscope/tests/: snapshots.rs
kaleidoscope/tests/snapshots/: snapshots__fibo-2.snap  snapshots__fibo.snap
samples/: fibonacci.kl  print_ast.kl  str_literal.kl  structs.kl
src/: codegen.rs  driver.rs  errors.rs  hir.rs  lexer.rs  main.rs  parser.rs  pretty_print.rs  resolve.rs  session.rs  ty.rs
src/codegen/: mod.rs
