[package]
name = "kaleidoscope"
version = "0.0.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.6", features = ["llvm18-1"] }

[lints.rust]
# unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
# expect_used = "warn"
# missing_docs_in_private_items = "warn"
# todo = "warn"
# unwrap_used = "warn"

wildcard_imports = "allow"

