[package]
name = "kaleidoscope"
version = "0.0.0"
edition = "2024"

[dependencies]
bumpalo = "3"
clap = { version = "4", features = ["derive"] }
index_vec = "0.1"
parking_lot = "0.12"
string-interner = "0.19"

# Cranelift backend
cranelift = { version = "0.121", optional = true }
cranelift-control = { version = "0.121", optional = true }
cranelift-jit = { version = "0.121", optional = true }
cranelift-module = { version = "0.121", optional = true }
cranelift-native = { version = "0.121", optional = true }
target-lexicon = { version = "0.13", optional = true }

# LLVM Backend (broken)
inkwell = { version = "0.6", features = ["llvm18-1"], optional = true }

# [dev-dependencies]
insta = "1"

[features]
# default = ["llvm"]
default = ["cranelift"]

debug = []

llvm = ["dep:inkwell"]
cranelift = [
  "dep:cranelift",
  "dep:cranelift-control",
  "dep:cranelift-jit",
  "dep:cranelift-module",
  "dep:cranelift-native",
  "dep:target-lexicon",
]

[lints.rust]
# not forbid because jit-ing is inherently unsafe
unsafe_code = "deny"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
# expect_used = "warn"
# missing_docs_in_private_items = "warn"
todo = "warn"
# unwrap_used = "warn"

wildcard_imports = "allow"
